src/syntax_analysis/expression/grouped_expression/tests/snapshots/rust_monkey_interpreter__syntax_analysis__expression__grouped_expression__tests__test_syntax_analysis_for_grouped_expressions_case1.snap
---
source: src/syntax_analysis/expression/grouped_expression/tests/mod.rs
expression: "crate::syntax_analysis::get_abstract_syntax_tree(crate::lexical_analysis::get_tokens(code.to_string()))"
---
{
  "abstract_syntax_tree": [
    {
      "EXPRESSION": {
        "expression": {
          "PREFIX": {
            "prefix_token": "MINUS",
            "right_hand": {
              "INFIX": {
                "left_hand": {
                  "INTEGER": {
                    "integer_token": {
                      "INTEGER": {
                        "literal": "5"
                      }
                    }
                  }
                },
                "operator_token": "MULTIPLY",
                "right_hand": {
                  "INTEGER": {
                    "integer_token": {
                      "INTEGER": {
                        "literal": "10"
                      }
                    }
                  }
                }
              }
            }
          }
        }
      }
    }
  ],
  "syntax_parsing_errors": []
}
