src/syntax_analysis/expression/grouped_expression/tests/snapshots/rust_monkey_interpreter__syntax_analysis__expression__grouped_expression__tests__test_syntax_analysis_for_grouped_expressions_case3.snap
---
source: src/syntax_analysis/expression/grouped_expression/tests/mod.rs
expression: "crate::syntax_analysis::get_abstract_syntax_tree(crate::lexical_analysis::get_tokens(code.to_string()))"
---
{
  "abstract_syntax_tree": [
    {
      "EXPRESSION": {
        "expression": {
          "INFIX": {
            "left_hand": {
              "INFIX": {
                "left_hand": {
                  "INTEGER": {
                    "integer_token": {
                      "INTEGER": {
                        "literal": "1"
                      }
                    }
                  }
                },
                "operator_token": "PLUS",
                "right_hand": {
                  "INFIX": {
                    "left_hand": {
                      "INTEGER": {
                        "integer_token": {
                          "INTEGER": {
                            "literal": "2"
                          }
                        }
                      }
                    },
                    "operator_token": "PLUS",
                    "right_hand": {
                      "INTEGER": {
                        "integer_token": {
                          "INTEGER": {
                            "literal": "3"
                          }
                        }
                      }
                    }
                  }
                }
              }
            },
            "operator_token": "PLUS",
            "right_hand": {
              "INTEGER": {
                "integer_token": {
                  "INTEGER": {
                    "literal": "4"
                  }
                }
              }
            }
          }
        }
      }
    }
  ],
  "syntax_parsing_errors": []
}
