src/syntax_analysis/expression/grouped_expression/tests/snapshots/rust_monkey_interpreter__syntax_analysis__expression__grouped_expression__tests__test_syntax_analysis_for_grouped_expressions_case4.snap
---
source: src/syntax_analysis/expression/grouped_expression/tests/mod.rs
expression: "crate::syntax_analysis::get_abstract_syntax_tree(crate::lexical_analysis::get_tokens(code))"
---
{
  "abstract_syntax_tree": [
    {
      "EXPRESSION": {
        "expression": {
          "PREFIX": {
            "prefix_token": "NOT",
            "right_hand": {
              "INFIX": {
                "left_hand": {
                  "BOOLEAN": {
                    "boolean_token": "TRUE"
                  }
                },
                "operator_token": "EQUALS",
                "right_hand": {
                  "BOOLEAN": {
                    "boolean_token": "TRUE"
                  }
                }
              }
            }
          }
        }
      }
    }
  ],
  "syntax_parsing_errors": []
}
